chore(tests): make file based tests parameterized